# Ampliaci-n-de-Entornos

./: .env.sample  .gitignore  00-Setup.ipynb  01-Regresión.ipynb  02-Entrenamiento.ipynb  02-Regresión.ipynb  03-Clasificación.ipynb  04-Deep Learning.ipynb  05-LLM.ipynb  06-Primeros pasos con LLM.ipynb  07-Hola Mundo LLM.ipynb  08-El rol assistant.ipynb  09.b-RAG con recetas de cocina.ipynb  10-Gradio.ipynb  11-Creación de Tools.ipynb  12-Hugging Face.ipynb  13-RAG.ipynb  14-LangChain.ipynb  15.b-Multimodal RAG.ipynb  16-Hola Mundo Agentes LLM.ipynb  16-Sistema de moderación.ipynb  17-Uso de Agentes LLM.ipynb  17.a-OpenAI SDK Agents.ipynb  17.b-CrewAI.ipynb  17.c3-LangGraph Project.ipynb  18-Uso de Tools.ipynb  18.a-Uso de Tools con la API de Google Gemini.ipynb  19.c1-LangGraph.ipynb  19.c2-LangGraph Project.ipynb  19.c3-LangGraph Project.ipynb  20.Agentic RAG.ipynb  21-Corrector.ipynb  config.py  gitignore  pyproject.toml  requirements.txt
17.b-CrewAi/coder/: series_calculation.txt
17.b-CrewAi/coder/output/: code_and_output.txt
17.b-CrewAi/coder/src/coder/: crew.py  main.py
17.b-CrewAi/debate/: .env.sample
17.b-CrewAi/debate/output/: decide.md  oppose.md
17.b-CrewAi/debate/src/debate/: crew.py  (+1 more)
17.b-CrewAi/engineering_team/: README.md
17.b-CrewAi/engineering_team/output/: accounts.py  app.py
17.b-CrewAi/financial_researcher/: .env.sample
17.b-CrewAi/stock_picker/: pyproject.toml
17.b-CrewAi/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
17.b-CrewAi/stock_picker/output/: research_report.json  trending_companies.json
19.b-CrewAi/debate/output/: propose.md
19.b-CrewAi/engineering_team/: pyproject.toml
19.b-CrewAi/engineering_team/output/: accounts_design.md  test_accounts.py
19.b-CrewAi/financial_researcher/output/: report.md
21.MCP/: 21.a-.binance_mcp_w_tools.py  21.b-binance_mcp_w_resources.py  21.c-binance_mcp_w_prompts.py  21.d-price_langhgraph.py
21.MCP/21.d-typescript_mcp/: package-lock.json  package.json
21.MCP/21.d-typescript_mcp/src/: binance_mcp.ts
21.MCP/21.e-cloudflare-mcp-server/my-cloud-mcp-server-public/: README.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
db/recipes/: chroma.sqlite3
exams/: exams.json
imgs/menus/Dim Sum/: carta.xlsx
pdfs/: recipe_info.json
txt/: transcript.txt
(+18 files in other folders)
