[project]
name = "help"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.11",
    "datasets>=3.6.0",
    "google-genai>=1.16.1",
    "gradio>=5.31.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "kaggle>=1.7.4.5",
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.4",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "openai-agents>=0.0.16",
    "pandas>=2.2.3",
    "plotnine>=0.14.5",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
]
