[project]
name = "help"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=14.3.0",
    "chromadb>=1.0.11",
    "datasets>=3.6.0",
    "google-genai>=1.16.1",
    "google-generativeai==0.8.5",
    "gradio>=5.31.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "kaggle>=1.7.4.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai==2.0.10",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.7",
    "lightrag-hku>=1.3.7",
    "lxml>=5.4.0",
    "markdown2>=2.5.3",
    "mcp[cli]>=1.9.3",
    "moviepy>=2.2.1",
    "nano-vectordb>=0.0.4.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "openai>=1.82.0",
    "openai-agents>=0.0.16",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandoc>=2.4",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pi-heif>=0.22.0",
    "pillow-heif>=0.22.0",
    "playwright>=1.52.0",
    "plotnine>=0.14.5",
    "pydantic>=2.11.5",
    "pydub>=0.25.1",
    "pymupdf>=1.26.0",
    "pypandoc>=1.15",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-pptx>=1.0.2",
    "pytubefix>=9.1.1",
    "pyvis>=0.3.2",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "unstructured>=0.17.2",
    "unstructured-inference>=1.0.2",
    "unstructured-pytesseract>=0.3.15",
]
